--- a/popup.html
+++ b/popup.html
@@ -6,6 +6,7 @@
 <body>
 
 <div id="frame" style="position:fixed; font-size:10px; font-family: 'Lucida Console';">
+	<img id="creditsimg" src="chris.png"></img>
 	<canvas id="canvasm" height="300" width="400" style="position:absolute; z-index:1;"></canvas>
 	<canvas id="canvass" height="300" width="400" style="position:absolute; z-index:0"></canvas>
 	
@@ -14,21 +15,45 @@
 			<img src="arrowkeys.png"></img>
 		</div>
 		<div id="text" style="padding-top:10px">
-			F - toggle faster/slower 
-			</br>
+			F - toggle faster/slower </br>
 			P - toggle pause
+			<!-- </br>
+			space - jump -->
 		</div>
 	</div>
 
-	<div id="score" style="position:fixed; z-index:3; left:1%; bottom:1%"><div class="num" style="color:black;float:right"></div></div>
-<!-- 	<a href="#" class="js-stats" style="position:fixed;bottom:1%; right:15%; z-index:3">stats</a> -->
-	<a href="#" class="js-controls" style="position:fixed;bottom:1%; right:15%; z-index:3">controls</a>
-	<a href="http://ski.ihoc.net/" style="position:fixed;bottom:1%; right:1%; z-index:3">credits</a>
 
+<!-- 	<div id="highscoresview" style="font-size:12px;">
+		<pre>
+		valentio 	Dec 08 2012 	4792
+		James K 	Dec 08 2012 	3003
+		Kayden 		Dec 07 2012 	2921
+		sadssad 	Dec 06 2012 	2856
+		skar pand 	Dec 06 2012 	2799
+		dario 		Dec 08 2012 	2637
+		Valentio 	Dec 06 2012 	2600
+		Hamood 		Dec 06 2012 	2527
+		123123 		Dec 07 2012 	2348
+		Aden 		Dec 08 2012 	2123
+		</pre>
+	</div>
+ -->
+<!-- 	<div id="submitscore">
+		<form class="form">
+			<input class="nameinput" type="text" name="name"/>
+		</form>
+	</div>
+ -->
+	<div id="score"><div class="num" style="color:black;float:right"></div></div>
+<!-- 	<a href="#" class="js-stats" style="position:fixed;bottom:1%; right:15%; z-index:3">stats</a> -->
+	<a href="#" class="menu-controls">controls</a>
+	<a href="#" class="menu-credits">credits</a>
+	<a href="#" class="menu-submitscore">submit score</a>
 </div>
 </body>
 <script src = "jquery-1.8.3.min.js"></script>
 <script src = "2dgeometry.js"></script>
+<script src = "utils.js"></script>
 <script src = "popup.js"></script>
 
 </html>
