--- a/popup.html
+++ b/popup.html
@@ -16,7 +16,8 @@
 		</div>
 		<div id="text" style="padding-top:10px">
 			F - toggle faster/slower </br>
-			P - toggle pause
+			P - toggle pause</br>
+			Space - jump
 			<!-- </br>
 			space - jump -->
 		</div>
@@ -48,7 +49,7 @@
 <!-- 	<a href="#" class="js-stats" style="position:fixed;bottom:1%; right:15%; z-index:3">stats</a> -->
 	<a href="#" class="menu-controls">controls</a>
 	<a href="#" class="menu-credits">credits</a>
-	<a href="#" class="menu-submitscore">submit score</a>
+<!-- 	<a href="#" class="menu-submitscore">submit score</a> -->
 </div>
 </body>
 <script src = "jquery-1.8.3.min.js"></script>
