--- a/popup.html
+++ b/popup.html
@@ -55,6 +55,7 @@
 <script src = "jquery-1.8.3.min.js"></script>
 <script src = "2dgeometry.js"></script>
 <script src = "utils.js"></script>
+<script src= "spriterects.js"></script>
 <script src = "popup.js"></script>
 
 </html>
